[tool.poetry]
name = "repl_python3_How-To-Easily-Insert-Python-Charts-Into-Excel-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
plotly = "^5.5.0"
seaborn = "^0.11.2"
yfinance = "^0.1.69"
fuefit = "^0.0.6"
pandas = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
